# geolib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
cmake/modules/: ClangFormat.cmake  ClangTidy.cmake  CompilerWarnings.cmake  IncludeWhatYouUse.cmake
examples/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  angle.cpp  bearing.cpp  elevation.cpp  latlng.distance.cpp  length.cpp  projection.cpp
